  * Native-reloc feature
  * Add daemon capabilities to server sockets, document socket and
    accept
  * Some gcl-tk fixes
  * Update wrapt-literals strategy to be consistent with CVS head --
    wrap evreything but symbols and integers, don't wrap when keeping
    the gazonk files for linking in different images, this is really a
    compile-file operation
  * gcltk demo cleanups

 -- Camm Maguire <camm@enhanced.com>  Sun,  1 May 2005 20:17:50 +0000

gcl (2.6.6-1) unstable; urgency=high

  * New upstream release
  * Allow .data section to be first in executable, as on solaris.  Also
    allow for new bfd section size semantics
  * Don't try to write map file when not using GNU ld.  Also allow
    compile-file to process pathnames with whitespace on Windows
  * Fix corner case fixnum arithmetic on 64bit machines
  * Rework gmp_wrappers semantics for older gcc
  * Explicitly mprotect loaded code pages PROT_EXEC on x86 Linux, as FC3
    now requires it.
  * lisp-implementation-version is GCL
  * Reader extension patch allowing for foo::(bar foobar) semantics
  * a shell script variable fix in "unixport/makefile" for MSYS
  * __MINGW32__ malloc initialisation fix in "o/alloc.c"
  * Windows file/directory fixes in "o/unixfsys.c"
  * MinGW32 -march in configure - removes deprecation warnings
  * MinGW32 directory fix - "o/mingfile.c".
  * Allow for sysconf to determine clock granularity at compile time to
    fix time errors on the Itanium
  * Disable SGC on macosx until the sgc/save problem can be fixed.
  * Fix fixnum print bug on 64bit
  * Fix nil types in room report
  * 64bit fixes to fixnum_add and fixnum_sub
  * Fix Mac SGC/save bug, at least in part

 -- Camm Maguire <camm@enhanced.com>  Sun, 16 Jan 2005 02:28:50 +0000

gcl (2.6.5-1) unstable; urgency=high

  * New gmp_wrappers.{c,h} files that prevent all GBC within gmp,
    obviating the need for gmp patches and a local gmp configure.  FIXME