@@ -17,8 +17,9 @@ gcl (2.6.7-1) unstable; urgency=low
     the gazonk files for linking in different images, this is really a
     compile-file operation
   * gcltk demo cleanups
+  * Probe-file, open_stream, and the like fail on directories
 
- -- Camm Maguire <camm@enhanced.com>  Sun,  1 May 2005 20:17:50 +0000
+ -- Camm Maguire <camm@enhanced.com>  Wed,  4 May 2005 17:36:31 +0000
 
 gcl (2.6.6-1) unstable; urgency=high
 
